--- a/.github/workflows/go.yml
+++ b/.github/workflows/go.yml
@@ -24,10 +24,10 @@ jobs:
     - name: Run tests with coverage
       run: |
         go test -v -coverprofile=coverage.out ./...
-        go tool cover -func=coverage.out
 
-    - name: Upload coverage artifact
-      uses: actions/upload-artifact@v4
+    - name: Upload coverage to Codecov
+      uses: codecov/codecov-action@v4
       with:
-        name: coverage-report
-        path: coverage.out
+        files: coverage.out
+        flags: unittests
+        token: ${{ secrets.CODECOV_TOKEN }} # nur nötig für private Repos
